[package]
name = "s3-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
aws-sdk-s3 = "1.3"
bytes = "1.4"
futures = "0.3"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
eyre = "0.6"
tracing = "0.1"
aws-types = "1.3"
aws-config = "1.3"
tracing-subscriber = "0.3"
async-stream = "0.3"
memmap2 = "0.5"

[dev-dependencies]
rand = "0.8"
